[package]
name = "rvbuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25", features = ["process", "fs", "macros", "rt-multi-thread"] }
serde = { version = "1.0.152", features = ["derive"] }
toml = { version = "0.7.2" }
anyhow = "1.0"
regex = "1.7"
colored = "2.0"
tempfile = "3.3"
